--- a/backend/app/static/impressum.html
+++ b/backend/app/static/impressum.html
@@ -1,3 +1,31 @@
+
+
+
+
+<!DOCTYPE html>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>
+    Welcom to Teleschocken
+</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="Welcom%20to%20Teleschocken-Dateien/bootstrap.css" rel="stylesheet">
+  <body>
+
+    <div class="row col-md-offset-1">
+      <div class="col-md-4">
+        <h3>Tele-Schocken Beta</h3>
+      </div>
+    </div>
+    <link rel="stylesheet" type="text/css" href="Welcom%20to%20Teleschocken-Dateien/style.css">
+    <link rel="stylesheet" type="text/css" href="Welcom%20to%20Teleschocken-Dateien/dice.css">
+    <link rel="stylesheet" href="Welcom%20to%20Teleschocken-Dateien/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
+<main>
+    <div class="header-img"></div>
+</main>
 <div><i>Lars Lengersdorf</i></div>
 <div><i>Baumberger Str. 22</i></div>
 <div><i>50737 Köln</i></div>
@@ -13,3 +41,9 @@
 <div><i>50737 Köln</i></div>
 <p><i>&nbsp;</i></p>
 </div>
+
+<script type="text/javascript" src="Welcom%20to%20Teleschocken-Dateien/jquery-1.js"></script>
+<script type="text/javascript" src="Welcom%20to%20Teleschocken-Dateien/bootstrap.js"></script>
+
+
+</body></html>
