--- a/backend/app/static/impressum.html
+++ b/backend/app/static/impressum.html
@@ -6,11 +6,9 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>
-    Welcom to Teleschocken
-</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="Welcom%20to%20Teleschocken-Dateien/bootstrap.css" rel="stylesheet">
+      Welcom to Teleschocken
+    </title>
+    <meta name="description" content="Kostenlos mit Freunden Schocken. Spiele Jule, Mörkeln, Knobeln, Maxen oder Meiern gemeinsam online mit deinen Freunden."/>
   <body>
 
     <div class="row col-md-offset-1">
