--- a/backend/app/static/datenschutz.html
+++ b/backend/app/static/datenschutz.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>
+      Welcom to Teleschocken
+    </title>
+    <meta name="description" content="Kostenlos mit Freunden Schocken. Spiele Jule, Mörkeln, Knobeln, Maxen oder Meiern gemeinsam online mit deinen Freunden."/>
+  <body>
+
+    <div class="row col-md-offset-1">
+      <div class="col-md-4">
+        <h3>Tele-Schocken Beta</h3>
+      </div>
+    </div>
+    <link rel="stylesheet" type="text/css" href="Welcom%20to%20Teleschocken-Dateien/style.css">
+    <link rel="stylesheet" type="text/css" href="Welcom%20to%20Teleschocken-Dateien/dice.css">
+    <link rel="stylesheet" href="Welcom%20to%20Teleschocken-Dateien/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
+<main>
+    <div class="header-img"></div>
+</main>
+
 <h1 style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;text-indent:0cm;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;color:black;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Datenschutzerkl&auml;rung</span></h1>
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Wir freuen uns &uuml;ber Ihren Besuch auf unserer Website. Diese Datenschutzerkl&auml;rung gilt auch f&uuml;r unsere Leistungen und die Teilnahme an unserem Spiel. Nachstehend informieren wir Sie ausf&uuml;hrlich &uuml;ber Art, Umfang und Zweck der von uns erhobenen, genutzten und verarbeiteten personenbezogenen Daten und kl&auml;ren Sie &uuml;ber die Ihnen als betroffene Person zustehenden Rechte auf.</span></p>
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Wir behalten uns das Recht vor, die Datenschutzerkl&auml;rung jederzeit mit Wirkung f&uuml;r die Zukunft zu &auml;ndern. Bei einem erneuten Besuch unserer Website gilt insoweit die aktualisierte und ver&ouml;ffentliche Datenschutzerkl&auml;rung. Die jeweils aktuelle Version der Datenschutzerkl&auml;rung kann jederzeit auf unserer Website abgerufen, abgespeichert und ausgedruckt werden.</span><span style='line-height:130%;font-family:"Calibri",sans-serif;'>&nbsp;</span></p>
@@ -296,3 +319,11 @@
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Die Aufsichtsbeh&ouml;rde, bei der die Beschwerde eingereicht wurde, unterrichtet den Beschwerdef&uuml;hrer &uuml;ber den Stand und die Ergebnisse der Beschwerde einschlie&szlig;lich der M&ouml;glichkeit eines gerichtlichen Rechtsbehelfs nach Art.&nbsp;78 DSGVO.</span></p>
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><strong><span style='line-height:130%;font-family:"Calibri",sans-serif;'>STAND: April 2020</span></strong></p>
 <div id="_com_2" language="JavaScript"><br></div>
+
+
+
+<script type="text/javascript" src="Welcom%20to%20Teleschocken-Dateien/jquery-1.js"></script>
+<script type="text/javascript" src="Welcom%20to%20Teleschocken-Dateien/bootstrap.js"></script>
+
+
+</body></html>
