UI Improvement mobile

--- a/backend/app/static/html/datenschutz.html
+++ b/backend/app/static/html/datenschutz.html
@@ -20,7 +20,8 @@
 <main>
     <div class="header-img"></div>
 </main>
-
+<div class="row">
+  <div style="font-size:2vw;" class="col-md-11 col-offset-1">
 <h1 style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;text-indent:0cm;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;color:black;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Datenschutzerkl&auml;rung</span></h1>
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Wir freuen uns &uuml;ber Ihren Besuch auf unserer Website. Diese Datenschutzerkl&auml;rung gilt auch f&uuml;r unsere Leistungen und die Teilnahme an unserem Spiel. Nachstehend informieren wir Sie ausf&uuml;hrlich &uuml;ber Art, Umfang und Zweck der von uns erhobenen, genutzten und verarbeiteten personenbezogenen Daten und kl&auml;ren Sie &uuml;ber die Ihnen als betroffene Person zustehenden Rechte auf.</span></p>
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Wir behalten uns das Recht vor, die Datenschutzerkl&auml;rung jederzeit mit Wirkung f&uuml;r die Zukunft zu &auml;ndern. Bei einem erneuten Besuch unserer Website gilt insoweit die aktualisierte und ver&ouml;ffentliche Datenschutzerkl&auml;rung. Die jeweils aktuelle Version der Datenschutzerkl&auml;rung kann jederzeit auf unserer Website abgerufen, abgespeichert und ausgedruckt werden.</span><span style='line-height:130%;font-family:"Calibri",sans-serif;'>&nbsp;</span></p>
@@ -319,11 +320,7 @@
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><span style='line-height:130%;font-family:"Calibri",sans-serif;'>Die Aufsichtsbeh&ouml;rde, bei der die Beschwerde eingereicht wurde, unterrichtet den Beschwerdef&uuml;hrer &uuml;ber den Stand und die Ergebnisse der Beschwerde einschlie&szlig;lich der M&ouml;glichkeit eines gerichtlichen Rechtsbehelfs nach Art.&nbsp;78 DSGVO.</span></p>
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:6.0pt;margin-left:0cm;text-align:justify;line-height:130%;font-size:15px;font-family:"Arial",sans-serif;'><strong><span style='line-height:130%;font-family:"Calibri",sans-serif;'>STAND: April 2020</span></strong></p>
 <div id="_com_2" language="JavaScript"><br></div>
-
-
-
-<script type="text/javascript" src="Welcom%20to%20Teleschocken-Dateien/jquery-1.js"></script>
-<script type="text/javascript" src="Welcom%20to%20Teleschocken-Dateien/bootstrap.js"></script>
-
+</div>
+</div>
 
 </body></html>
