--- a/backend/app/static/html/impressum.html
+++ b/backend/app/static/html/impressum.html
@@ -20,20 +20,25 @@
 <main>
     <div class="header-img"></div>
 </main>
-<div><i>Lars Lengersdorf</i></div>
-<div><i>Baumberger Str. 22</i></div>
-<div><i>50737 Köln</i></div>
-<div></div>
-<div><a href="mailto:datenschutz@tele-schocken.de">datenschutz@tele-schocken.de</a></div>
-<div><i>+49 (0)174 318 48 49</i></div>
-<div><i>&nbsp;</i></div>
-<div>
-<h4><i>Verantwortlicher gemäß § 55 Abs. 2 RStV (V.i.S.d.P.):</i></h4>
-<div><i>Lars Lengersdorf</i></div>
-<div>
-<div><i>Baumberger Str. 22</i></div>
-<div><i>50737 Köln</i></div>
-<p><i>&nbsp;</i></p>
+<div class="row">
+  <div style="font-size:2vw;" class="col-md-11 col-offset-1">
+    <div><i>Lars Lengersdorf</i></div>
+    <div><i>Baumberger Str. 22</i></div>
+    <div><i>50737 Köln</i></div>
+    <div></div>
+    <div><a href="mailto:datenschutz@tele-schocken.de">datenschutz@tele-schocken.de</a></div>
+    <div><i>+49 (0)174 318 48 49</i></div>
+    <div><i>&nbsp;</i></div>
+    <div>
+    <h4><i>Verantwortlicher gemäß § 55 Abs. 2 RStV (V.i.S.d.P.):</i></h4>
+    <div><i>Lars Lengersdorf</i></div>
+    <div>
+    <div><i>Baumberger Str. 22</i></div>
+    <div><i>50737 Köln</i></div>
+    <p><i>&nbsp;</i></p>
+    </div>
+  </div>
 </div>
+
 
 </body></html>
