--- a/backend/app/static/html/impressum.html
+++ b/backend/app/static/html/impressum.html
@@ -8,6 +8,7 @@
     <title>
       Welcom to Teleschocken
     </title>
+    <meta name="robots" content="noindex">
     <meta name="description" content="Kostenlos mit Freunden Schocken. Spiele Jule, Mörkeln, Knobeln, Maxen oder Meiern gemeinsam online mit deinen Freunden."/>
   <body>
 
